fixed overflow due to default image

--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,8 @@ body {
 
 ul {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 1fr);
+  grid-template-columns: 1fr;
   gap: 3em 2em;
-}
-
-.mainSection {
-  padding: 3em 6em;
 }
 
 h1 {
@@ -29,6 +25,10 @@ h1 {
   aspect-ratio: 1 / 1.2;
   color: black;
   text-decoration: none;
+}
+
+.mainSection {
+  padding: 3em 1em;
 }
 
 .ListingTile h4 {
@@ -78,11 +78,15 @@ h1 {
   overflow: hidden;
   position: relative;
 }
-img {
+
+.listingImage {
   height: 100%;
 }
 
 @media (min-width: 600px) {
+  .mainSection {
+    padding: 3em 6em;
+  }
   ul {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   }
